@@ -7,6 +7,7 @@ import com.example.blogbackend.dto.CreateBlogPostDto;
 import com.example.blogbackend.exception.BlogPostNotFoundException;
 import com.example.blogbackend.repository.BlogPostRepository;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
@@ -25,24 +26,25 @@ public class BlogPostService {
     public BlogPostDto createBlogPost(CreateBlogPostDto blogPostDTO) {
         BlogPost blogPost = blogPostDTO.toDomain();
         BlogPost newBlogPost = blogPostRepository.save(blogPost);
-        return BlogPost.toDto(newBlogPost);
+        return BlogPostDto.toDto(newBlogPost);
     }
 
     public Page<BlogPostDto> getAllBlogPosts(int page, int size) {
         PageRequest pageRequest = PageRequest.of(page, size);
-        Page<BlogPost> blogPostList = blogPostRepository.findAll(pageRequest);
+        Page<BlogPost> blogPostPage = blogPostRepository.findAll(pageRequest);
         
-        List<BlogPostDto> blogPostDtoList = blogPostList.getContent().stream()
-                .map(BlogPost::toDto)
-                .toList();
+        List<BlogPostDto> blogPostDtoList = blogPostPage.getContent().stream()
+                .map(BlogPostDto::toDto)
+                .collect(Collectors.toList());
         
-        return blogPostList.map(BlogPost::toDto);
+        System.out.println(new PageImpl<>(blogPostDtoList, pageRequest, blogPostPage.getTotalPages()));
+        return new PageImpl<>(blogPostDtoList, pageRequest, blogPostPage.getTotalPages());
     }
 
     public BlogPostDto getBlogPostById(Long id) {
         BlogPost blogPost = blogPostRepository.findById(id).orElseThrow(
                 () -> new BlogPostNotFoundException("Blog post with id: " + id + " not found.")
         );
-        return BlogPost.toDto(blogPost);
+        return BlogPostDto.toDto(blogPost);
     }
 }
